# DBManager_for_JP

./: Python.json  README.md  classes.py  database.py  db_classes.py  main.py  pyproject.toml
