[tool.poetry]
name = "dbmanager-for-jp"
version = "0.1.0"
description = ""
authors = ["d.larin <larin.dn@icloud.com>"]
readme = "README.md"
packages = [{include = "dbmanager_for_jp"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
